# vow

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  TEST_COVERAGE_ANALYSIS.md  codecov.yml  workflow.yml
.claude/: settings.json
.github/: dependabot.yml
.github/semantic-release/: set-version.sh
.github/workflows/: cargo-mutants.yml  ci.yml  claude-code-review.yml  claude.yml  docs.yml  (+4 more)
bench/: config.toml  llm.py  manifest.py  prompts.py  pyproject.toml  report.py  run.py  runner.py  test_prompts.py  translate_dafny.py  triage_humaneval.py  verifier.py
benchmarks/: README.md  manifest.toml
compiler/: ast.vow  c_emitter.vow  cgen.vow  checker.vow  clif.vow  complexity.vow  complexity_graph.vow  complexity_main.vow  diag.vow  env.vow  frontend.vow  ir.vow  ir_printer.vow  lexer.vow  lower.vow  main.vow  module_io.vow  mutants_main.vow  mutants_oracle.vow  mutants_sites.vow  parser.vow  perfetto.vow  region.vow  span.vow  test_arith.vow  test_assign.vow  test_hello.vow  test_string.vow  test_struct.vow  test_vec.vow  test_vow.vow  test_while.vow  token.vow  types.vow  verifier.vow  verifier_harness.vow  verifier_ids.vow
docs/: WAVE4_PLAN.md  agent-dev-tools-report.md  build-system-audit.md  design-performance-guarantees.md  ideas-improvement.md  level2-test-results.md  level3-test-results.md  level5-test-trace.md  live-programming-research.md  mutants.md  plan-ai-coding-lang-bench.md  roadmap-0.3.0-foundations.md  roadmap.md  verifier-discipline.md  verifier-eval.md  vow_design.md  vow_design_sketch.md
euler/: BLOG_OUTLINE.md  README.md  manifest.toml  pyproject.toml  run.py
examples/: .gitignore  bisect.vow  bitwise_xor.vow  break_simple.vow  caller_blame.vow  cegis_broken.vow  cegis_fixed.vow  chess_uci.vow  cmdloop.vow  const_simple.vow  countdown.vow  dealloc_multi.vow  dealloc_phi_struct.vow  dealloc_string.vow  divide.vow  for_each.vow  for_enumerate.vow  foreach.vow  forward_ref.vow  hello.vow  loop_break.vow  map_missing.vow  match_fieldless.vow  match_mut.vow  search.vow  short_circuit.vow  stdin_read.vow  string_build.vow  string_contains.vow  string_empty.vow  string_eq.vow  string_ops.vow  string_parse.vow  string_substring.vow  sum_range.vow  u64_basic.vow  u64_cast.vow  u64_verify.vow  u8_numeric_tower.vow  vec_bounds.vow  (+7 more)
lib/: ROADMAP.md
plans/: issue-254-region-source-file.md  sat-demo.md
prompts/: impl.md  plan.md
reports/: 2026-03-07-sonnet-4-6.md  2026-03-15-humaneval-sonnet-4.md  2026-03-22-publication-comparison.md  2026-06-18-complexity-calibration.md  README.md
scripts/: bootstrap.sh  build_docs_site.py  bump-version.sh  check-ulimit-vowc.sh  check_contract_quality.py  check_help_coverage.py  cli_compat_test.sh  complexity_calibrate.py  concat_vow.sh  fmt-hook.sh  full_test.sh  generate_help.py  install-toolchain.sh  measure_bootstrap_rss.sh  package-toolchain.sh  play_uci_match.py  proptest.sh  release.sh  semgrep-scan.sh  session-start.sh  test_verify_eval.py  validate_trace_gz.py  verify_eval.py
stdlib/: README.md
tests/: run_tests.sh  test_complexity_calibrate.py
vow/: Cargo.toml
vow-clif-shim/: Cargo.toml
vow-clif-shim/src/: lib.rs
vow-codegen/: Cargo.toml
vow-codegen/src/: cranelift_backend.rs  lib.rs  linker.rs  return_materialization.rs
vow-codegen/tests/: e2e.rs  proptest_pipeline.rs
vow-diag/: Cargo.toml
vow-driver/: Cargo.toml
vow-ir/: Cargo.toml
vow-runtime/: Cargo.toml
vow-syntax/: Cargo.toml
vow-types/: Cargo.toml
vow-verify/: Cargo.toml  README.md
vow/src/: cache.rs  cex_eval.rs  complexity.rs  contract_quality.rs  contracts.rs  counterexample.rs  frontend.rs  main.rs  module_loader.rs  perfetto.rs  replay.rs  report.rs  skill.rs  test_runner.rs
vow/tests/: agent_level1.rs  contracts.rs  effect_gating.rs  pattern_gating.rs  perfetto.rs  region_summary_equivalence.rs  verifier_panic.rs
website/: README.md  mkdocs.yml  requirements.in  requirements.txt
workflow/: agents.py  config.toml  llm.py  orchestrator.py  prompts.py  pyproject.toml  run.py  verifier.py
(+987 files in other folders)
