[package]
name = "vow-clif-shim"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cranelift-codegen = "0.133"
cranelift-frontend = "0.133"
cranelift-module = "0.133"
cranelift-object = "0.133"
cranelift-native = "0.133"
target-lexicon = "0.13"

[dev-dependencies]
tempfile = "3"
