[package]
name = "vow-clif-shim"
version = "0.4.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cranelift-codegen = "0.134"
cranelift-frontend = "0.134"
cranelift-module = "0.134"
cranelift-object = "0.134"
cranelift-native = "0.134"
target-lexicon = "0.13"

[dev-dependencies]
tempfile = "3"
