[package]
name = "vow-codegen"
version = "0.2.0"
edition = "2024"

[dependencies]
vow-ir = { path = "../vow-ir" }
vow-diag = { path = "../vow-diag" }
cranelift-codegen = "0.132"
cranelift-frontend = "0.132"
cranelift-module = "0.132"
cranelift-object = "0.132"
cranelift-native = "0.132"
target-lexicon = "0.13"

[dev-dependencies]
vow-syntax = { path = "../vow-syntax" }
vow-types = { path = "../vow-types" }
vow-diag = { path = "../vow-diag" }
proptest = "1"
tempfile = "3"
object = "0.39"
