[package]
name = "vow-codegen"
version = "0.3.0"
edition = "2024"

[dependencies]
vow-ir = { path = "../vow-ir" }
vow-diag = { path = "../vow-diag" }
cranelift-codegen = "0.134"
cranelift-frontend = "0.134"
cranelift-module = "0.134"
cranelift-object = "0.134"
cranelift-native = "0.134"
target-lexicon = "0.13"

[dev-dependencies]
vow-syntax = { path = "../vow-syntax" }
vow-types = { path = "../vow-types" }
vow-diag = { path = "../vow-diag" }
proptest = "1"
tempfile = "3"
object = "0.39"
