[package]
name = "vow"
version = "0.1.0"
edition = "2021"

[dependencies]
vow-syntax = { path = "../vow-syntax" }
vow-types = { path = "../vow-types" }
vow-ir = { path = "../vow-ir" }
vow-codegen = { path = "../vow-codegen" }
vow-verify = { path = "../vow-verify" }
vow-diag = { path = "../vow-diag" }
vow-runtime = { path = "../vow-runtime" }
