[package]
name = "vow"
version = "0.1.0"
edition = "2024"

[dependencies]
vow-syntax = { path = "../vow-syntax" }
vow-types = { path = "../vow-types" }
vow-ir = { path = "../vow-ir" }
vow-codegen = { path = "../vow-codegen" }
vow-verify = { path = "../vow-verify" }
vow-diag = { path = "../vow-diag" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
